chore: bigger h1, larger padding for the text container and scrollbar fix

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,15 +1,15 @@
 @import '../../node_modules/bootstrap/scss/functions';
 
-$green: #198754;
+$green: #386B46;
 $cyan: #0dcaf0;
-$yellow: #ffc107;
+$yellow: #768b31;
 $red: #dc3545;
 $gray-100: #f8f9fa;
 $gray-900: #212529;
 
 $primary: #F2CB05;
 $secondary: #386B46;
-$tertiary: #F23030;
+$tertiary: #768b31;
 $quaternary: #731717;
 $quinary: #11332D;
 $success: $green;
